--- a/Areas/Farmer/Views/Inventory/Wallet.cshtml
+++ b/Areas/Farmer/Views/Inventory/Wallet.cshtml
@@ -1,9 +1,12 @@
 ﻿@model OrganicOption.Models.FarmerShop
 <br />
-<div class="container">
-    <h3>Rider Dashboard</h3>
+<div class="container justify-content-center">
+    <a href="javascript:history.back()" class="btn btn-secondary mb-3"><i class="fa fa-arrow-left"></i> Back</a>
+  
 
-    <div class="row">
+    <div class="row text-center justify-content-center">
+        <h3 class="mb-2">Shop Revenue</h3>
+        <hr />
         <div class="col-md-4">
             <h4>Total Revenue</h4>
             <p>@Model.ShopRevenue</p>
@@ -11,8 +14,8 @@
 
         <div class="col-md-4">
             <h4>Actions</h4>
-            <a href="@Url.Action("RequestWithdraw", "Inventory")" class="btn btn-primary">Request Withdrawal</a>
-            <a href="@Url.Action("WithdrawHistory", "Inventory")" class="btn btn-secondary">History Details</a>
+            <a href="@Url.Action("RequestWithdraw", "Inventory")" class="btn btn-primary m">Request Withdrawal</a>
+            <a href="@Url.Action("WithdrawHistory", "Inventory")" class="btn btn-secondary " style="margin-left:5px">History Details</a>
         </div>
     </div>
 </div>
