--- a/Areas/Rider/Views/RiderOffer/MyOffer.cshtml
+++ b/Areas/Rider/Views/RiderOffer/MyOffer.cshtml
@@ -35,39 +35,43 @@
 {
     <div class="container">
         <div class="row justify-content-center">
-            <div class="card col-lg-8 col-md-10 p-4">
+            <div class="card p-4 col-lg-8 col-md-10 col-sm-12 ">
+            @*     style="width: 50%; max-width: 600px; *@
                 <h4 class="text-center mb-2">Offer Details</h4>
-                <p class="text-center"><strong>Order ID:</strong> @Model.OrderId</p>
+
 
                 @foreach (var product in Model.ProductDetails)
                 {
-                    <div class="row mb-4">
-                        <div class="col-md-10">
+                    <div class="row mb-4 mt-2">
+                        <div class="col-md-6">
+
+                            <p class="text-center"><strong>Order ID:</strong> @Model.OrderId</p>
+                            <p class="text-center"><strong>Product Name:</strong> @product.ProductName   </p>
                             <p class="text-center">
-                                <strong>Product Name:</strong> @product.ProductName
                                 <strong style="margin-left:7px">Product Quantity:</strong> @product.Quantity
                             </p>
                         </div>
-                        <div class="col-md-10 text-center">
-                            <p><strong>Product Image:</strong></p>
-                            <img src="~/@product.ProductImage" alt="Product Image" class="img-fluid rounded" style="max-width: 150px;" />
+                        <div class="col-md-4 justify-content-center">
+                            
+                            <img src="~/@product.ProductImage" alt="Product Image" class="img-fluid rounded" style="margin-left:110px" />
                         </div>
                     </div>
                 }
-
                 <div class="row mb-4">
-                    <div class="col-md-6">
+                    <div class="col-lg-6 col-md-3">
                         <h5 class="text-center">Shop Information</h5>
                         <p class="text-center"><strong>Shop Name:</strong> @Model.ShopName</p>
+                     
                         @if (Model.ShopAddress != null)
                         {
                             <p class="text-center"><strong>Shop Address:</strong> @Model.ShopAddress.House, @Model.ShopAddress.StreetNo, @Model.ShopAddress.WardNo, @Model.ShopAddress.Thana, @Model.ShopAddress.District, @Model.ShopAddress.Division</p>
                         }
+                        <p class="text-center"><strong>Shop Phone:</strong> @Model.ShopContract</p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-lg-6 col-md-3">
                         <h5 class="text-center">Customer Information</h5>
-                         <p class="text-center"><strong>Customer Name:</strong> @Model.CustomerName</p> 
-                        
+                        <p class="text-center"><strong>Customer Name:</strong> @Model.CustomerName</p>
+
                         @if (Model.CutomerCurrentAddress != null)
                         {
                             <p class="text-center"><strong> Address:</strong> @Model.CutomerCurrentAddress.House, @Model.CutomerCurrentAddress.StreetNo, @Model.CutomerCurrentAddress.WardNo, @Model.CutomerCurrentAddress.Thana, @Model.CutomerCurrentAddress.District, @Model.CutomerCurrentAddress.Division</p>
@@ -76,18 +80,18 @@
                     </div>
                 </div>
 
-                <div class="row mb-4">
-                    <div class="col-md-6 text-center">
-                        <p><strong>Estimated Delivery Time:</strong> @Model.DeliveryTime.ToString(@"d\.hh\:mm")</p>
+                <div class="row mb-2">
+                    <div class="col-lg-6 col-md-3 text-center">
+                        <p class="offerText"><strong>Estimated Delivery Time:</strong> @Model.DeliveryTime.ToString(@"d\.hh\:mm")</p>
                     </div>
-                    <div class="col-md-6 text-center">
-                        <p><strong>Estimated Revenue:</strong> @Model.Revenue</p>
+                    <div class="col-lg-6 col-md-3 text-center">
+                        <p class="offerText"><strong>Estimated Revenue:</strong> @Model.Revenue</p>
                     </div>
                 </div>
 
-                <div class="row mb-4">
-                    <div class="col-md-12 text-center">
-                        <p><strong>Time Remaining:</strong> <span id="time-remaining">@Model.TimeRemaining.ToString("mm':'ss")</span></p>
+                <div class="row ">
+                    <div class="col-lg-12 col-md-6 text-center">
+                        <p class="offerText"><strong>Time Remaining:</strong> <span id="time-remaining">@Model.TimeRemaining.ToString("mm':'ss")</span></p>
                     </div>
                 </div>
 
@@ -119,7 +123,7 @@ else
         color: black;
     }
 
-        
+
     .card {
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         border-radius: 10px;
@@ -128,7 +132,7 @@ else
         margin-top: 30px;
     }
 
-       
+
 
     h4 {
         background-color: #8765;
@@ -158,7 +162,7 @@ else
 
     setTimeout(function () {
         window.location.reload(true);
-    }, 60000); 
+    }, 60000);
 
 
     function startCountdown(duration) {
