--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -3,21 +3,24 @@
 @{
     ViewData["Title"] = "Forgot your password?";
 }
-
-<h3>@ViewData["Title"]</h3>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 50vh;">
+    <div class="text-center">
+        <h3 class="mt-2">@ViewData["Title"]</h3>
+        <hr />
+        <h4 class="mt-2">Enter your email.</h4>
+    
+        <div class="row mt-2 ">
+            <div class="col-md-8">
+                <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group ">
+                        <input asp-for="Input.Email" class="form-control" style="width:400px"/>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <button type="submit" style="margin-left:50PX;width:300px" class="btn btn-success mt-3">Submit</button>
+                </form>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        </div>
     </div>
 </div>
 
