--- a/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -4,8 +4,11 @@
     ViewData["Title"] = "Forgot password confirmation";
 }
 
+<div class="container">
+
 <h3>@ViewData["Title"]</h3>
 <p>
     Please check your email to reset your password.
 </p>
+</div>
 
