--- a/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Reset password";
 }
+<div class="container">
+
 
 <h3>@ViewData["Title"]</h3>
 <h4>Reset your password.</h4>
@@ -30,6 +32,7 @@
             <button type="submit" class="btn btn-default">Reset</button>
         </form>
     </div>
+</div>
 </div>
 
 @section Scripts {
